--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
     background-color:#060d05;
     color:#eee;
     font-size:0.9em;
-    background-image:url("images/bg.jpg");
+    background-image:url("bg.jpg");
     background-repeat:no-repeat;
     font-family:'Noto Sans', helvetica, sans-serif;
     background-attachment:fixed;
